--- a/src/App.css
+++ b/src/App.css
@@ -23,18 +23,23 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: var(--background-color);
-  display: flex;
-  justify-content: center;
-  /* margin: 0 auto 60px; */
-  width: 100vw;
+#root {
+  /* display: flex; */
+  /* gap: 60px; */
+  margin: 0;
+  padding: 0;
 }
 
 html {
   scroll-behavior: smooth;
+  font-size: 16px;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: var(--background-color);
+  min-height: 100vh;
+  width: 100%;
 }
 
 p {
@@ -46,12 +51,6 @@ p {
 a,
 .btn {
   transition: all 300ms ease;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
 }
 
 h1,
