--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,9 @@ body {
 
 p {
   color: rgb(85, 85, 85);
+  /* font-size: 16px; */
+  /* font-weight: 300; */
+  /* font-family: "Roboto Mono", monospace; */
 }
 
 /* TRANSITION */
@@ -53,39 +56,34 @@ a,
   transition: all 300ms ease;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 p {
   color: var(--text-color);
   margin: 0;
   padding: 0;
-}
+} */
 
 h1 {
   font-size: 3rem;
 }
 
-h2,
+/* h2,
 h3,
 p {
   font-family: "Roboto Mono", monospace;
-}
+} */
 
 h1,
 h2 {
   text-transform: uppercase;
 }
 
-h2,
+/* h2,
 h3 {
   font-size: 20px;
-}
-
-p {
-  font-size: 16px;
-  font-weight: 300;
-}
+} */
 
 .sectionTitle {
   margin-bottom: 30px;
@@ -93,4 +91,11 @@ p {
 
 .hover {
   cursor: pointer;
+}
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
 }
