--- a/src/components/Header/HeaderStyle.module.css
+++ b/src/components/Header/HeaderStyle.module.css
@@ -1,30 +1,25 @@
 /* DESKTOP NAV */
 
-nav {
+nav,
+.navLinks {
   display: flex;
+}
+nav {
   justify-content: space-around;
   align-items: center;
   height: 17vh;
 }
 
 .navLinks {
-  background-color: var(--background-color);
-  display: flex;
-  gap: 1rem;
-}
-
-/* .nav-links {
+  gap: 1.5rem;
   list-style: none;
   font-size: 1.5rem;
-} */
+}
 
 a {
   color: black;
   text-decoration: none;
   text-decoration-color: white;
-}
-li {
-  list-style: none;
 }
 
 a:hover {
@@ -42,29 +37,18 @@ a:hover {
   cursor: default;
 }
 
-.colorModeContainer {
-  position: relative;
-}
+/* Nav-MENU */
 
-.colorMode {
-  width: 25px;
-}
-.colorMode:hover {
-  cursor: pointer;
-}
-
-/* HAMBURGER MENU */
-
-#nav-menu {
+#navMenu {
   display: none;
 }
 
-.dropdown-menu {
+.dropdownMenu {
   position: relative;
   display: inline-block;
 }
 
-.menu-icon {
+.menuIcon {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -73,14 +57,14 @@ a:hover {
   cursor: pointer;
 }
 
-.hamburger-icon span {
+.menuIcon span {
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.menu-links {
+.menuLinks {
   position: absolute;
   top: 100%;
   right: 0;
@@ -88,10 +72,10 @@ a:hover {
   width: fit-content;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.menu-links a {
+.menuLinks a {
   display: block;
   padding: 10px;
   text-align: center;
@@ -101,30 +85,41 @@ a:hover {
   transition: all 0.3 ease-in-out;
 }
 
-.menu-links.open {
+.menuLinks.open {
   max-height: 300px;
 }
 
-.hamburger-icon.open span:first-child {
+.menuIcon.open span:first-child {
   transform: rotate(45deg) translate(10px, 5px);
 }
 
-.hamburger-icon.open span:nth-child(2) {
+.menuIcon.open span:nth-child(2) {
   opacity: 0;
 }
 
-.hamburger-icon.open span:last-child {
+.menuIcon.open span:last-child {
   transform: rotate(-45deg) translate(10px, -5px);
 }
 
-.hamburger-icon span:first-child {
+.menuIcon span:first-child {
   transform: none;
 }
 
-.hamburger-icon span:first-child {
+.menuIcon span:first-child {
   opacity: 1;
 }
 
-.hamburger-icon span:first-child {
+.menuIcon span:first-child {
   transform: none;
+}
+
+/* @mediaQuesries */
+
+@media screen and (max-width: 1200px) {
+  #desktopNav {
+    display: none;
+  }
+  #navMenu {
+    display: flex;
+  }
 }
